# SE_Exam

./: .gitmodules  CmakeLists.txt  README.md
src/: AbstractGame.cpp  AbstractGame.h  CMakeLists.txt  Color.h  DrawingBindings.h  Game.cpp  Game.h  Game.rc  GameDefines.h  GameEngine.cpp  GameEngine.h  GameWinMain.cpp  GameWinMain.h  UtilsBindings.h  Vector.h  resource.h
src/lua/: GameOfLife.lua  api_docs.lua  game.lua  test.lua
